[gd_scene load_steps=7 format=3 uid="uid://b8kv1h8yj2x75"]

[ext_resource type="PackedScene" uid="uid://itd28xc30rm3" path="res://fight_scenes/battle_scenes.tscn" id="1_m0xuu"]
[ext_resource type="Script" path="res://fight_scenes/second_fight.gd" id="2_dpqew"]
[ext_resource type="PackedScene" uid="uid://q1jsmk1qap2h" path="res://Candidate/creature_scene.tscn" id="2_kxn5h"]
[ext_resource type="Texture2D" uid="uid://con1pogdmtu52" path="res://Sprites/placeholder_battle_background_1.png" id="3_xcfof"]
[ext_resource type="PackedScene" uid="uid://oxmgnoxwt81c" path="res://fight_scenes/enemies/second_enemy.tscn" id="3_yq64n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bo8f4"]
size = Vector2(101.5, 219)

[node name="second_fight" instance=ExtResource("1_m0xuu")]
script = ExtResource("2_dpqew")

[node name="bg" type="Sprite2D" parent="." index="0"]
position = Vector2(593, 389)
scale = Vector2(0.59625, 0.59625)
texture = ExtResource("3_xcfof")

[node name="Creature_Scene" parent="." index="1" instance=ExtResource("2_kxn5h")]
position = Vector2(397, 321)

[node name="second_enemy" parent="." index="2" instance=ExtResource("3_yq64n")]
position = Vector2(980, 299)

[node name="Canidate_health" type="Label" parent="." index="3"]
offset_left = 44.0
offset_top = 34.0
offset_right = 84.0
offset_bottom = 57.0

[node name="Enemy_Health" type="Label" parent="." index="4"]
offset_left = 998.0
offset_top = 225.0
offset_right = 1038.0
offset_bottom = 248.0

[node name="exit" type="Area2D" parent="." index="5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit" index="0"]
position = Vector2(1101, 333)
shape = SubResource("RectangleShape2D_bo8f4")

[connection signal="body_entered" from="exit" to="." method="_on_exit_body_entered"]
